New Crowdin updates (#632)
* New translations messages.json (Portuguese, Brazilian)

* New translations messages.json (English)

* New translations messages.json (German)

* New translations messages.json (Portuguese, Brazilian)

* New translations messages.json (English)

* New translations messages.json (German)

* New translations messages.json (Portuguese, Brazilian)

* New translations messages.json (English)

* New translations messages.json (Japanese)

* New translations messages.json (Portuguese, Brazilian)

* New translations messages.json (German)

* New translations messages.json (English)

* New translations messages.json (Portuguese, Brazilian)

* New translations messages.json (Japanese)

--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -421,5 +421,20 @@
   },
   "settings_badges": {
     "message": "Abzeichen"
+  },
+  "settings_show_a_clear_all_columns_button_in_the_sidebar": {
+    "message": "Den \"Alle Spalten löschen\"-Button in der Sidebar anzeigen"
+  },
+  "settings_require_alt_images": {
+    "message": "Den Tweet-Button deaktivieren, bis alle Bilder eine Beschreibung haben"
+  },
+  "settings_content_warning_hint": {
+    "message": "Wir prüfen, ob Tweets die gebräuchlichen CW-, TW- oder CN-Hinweise enthalten und zeigen diese an!"
+  },
+  "settings_show_content_warnings": {
+    "message": "Inhaltswarnungen für entsprechend markierte Tweets anzeigen"
+  },
+  "settings_images": {
+    "message": "Bilder"
   }
 }
