--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -439,5 +439,11 @@
   },
   "settings_collapse_unread_dms": {
     "message": "Also collapse unread DMs"
+  },
+  "settings_mutual_badge_use_a_heart": {
+    "message": "Use a heart"
+  },
+  "settings_mutual_badge_use_double_arrows": {
+    "message": "Use double arrows"
   }
 }
