--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -445,5 +445,8 @@
   },
   "settings_mutual_badge_use_double_arrows": {
     "message": "Use double arrows"
+  },
+  "settings_show_account_avatars_on_top_of_columns": {
+    "message": "Show account avatars on top of columns"
   }
 }
