Add setting to control alt text requirement in DMs
https://github.com/eramdam/BetterTweetDeck/issues/666

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -451,5 +451,8 @@
   },
   "settings_show_conversation_control_button": {
     "message": "Show conversation control button"
+  },
+  "settings_disable_it_in_the_dm_composer_too": {
+    "message": "Applies to the DM composer too"
   }
 }
