--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -462,7 +462,7 @@
     "message": "Hide the \"Try TweetDeck Preview\" button"
   },
   "settings_pronouns_extra": {
-    "message": "If you notice any errors, please let me know on @BetterTDeck"
+    "message": "Only support English pronouns for now. If you notice any errors, please let me know on @BetterTDeck"
   },
   "settings_extract_pronouns": {
     "message": "Extract pronouns from users' biography or location and show them within columns"
