--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -466,5 +466,8 @@
   },
   "settings_extract_pronouns": {
     "message": "Extract pronouns from users' biography or location and show them within columns"
+  },
+  "settings_mute_nfts_accounts": {
+    "message": "Mute accounts who use the NFT avatar integration"
   }
 }
