Expose setting in the UI

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -466,5 +466,8 @@
   },
   "settings_extract_pronouns": {
     "message": "Extract pronouns from users' biography or location and show them within columns"
+  },
+  "settings_require_confirmation_for_block_and_mute_actions": {
+    "message": "Require confirmation for block and mute actions"
   }
 }
