--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -468,7 +468,7 @@
     "message": "Extract pronouns from users' biography or location and show them within columns"
   },
   "settings_mute_nfts_accounts": {
-    "message": "Mute accounts who use the NFT avatar integration (hexagonal-shaped avatar)"
+    "message": "Mute accounts who use the NFT avatar integration (hexagon-shaped avatar)"
   },
   "settings_require_confirmation_for_block_and_mute_actions": {
     "message": "Require confirmation for block and mute actions"
