New Crowdin updates (#766)
* New translations messages.json (Japanese)

* New translations messages.json (English)

* New translations messages.json (Japanese)

* New translations messages.json (English)

* New translations messages.json (French)

* New translations messages.json (Portuguese, Brazilian)

* New translations messages.json (French)

* New translations messages.json (English)

--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -478,5 +478,11 @@
   },
   "settings_click_this_notification_to_reload": {
     "message": "Cliquez sur cette notification pour recharger les onglet(s) TweetDeck et récupérer la dernière mise à jour !"
+  },
+  "settings_show_twitters_warnings_on_media": {
+    "message": "Afficher les avertissements de Twitter sur les médias"
+  },
+  "settings_twitter_added_feature_in_january_2022": {
+    "message": "Fonctionnalité ajoutée par Twitter en Janvier 2022"
   }
 }
