--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -467,9 +467,6 @@
   "settings_extract_pronouns": {
     "message": "ユーザーの自己紹介や位置情報から代名詞を抽出し、カラムに表示する"
   },
-  "settings_mute_nfts_accounts": {
-    "message": "NFTアイコンを使用しているユーザーをミュートする(六角形のアイコン)"
-  },
   "settings_require_confirmation_for_block_and_mute_actions": {
     "message": "「ブロック」と「ミュート」のアクションで確認メッセージを表示"
   },
@@ -478,5 +475,8 @@
   },
   "settings_click_this_notification_to_reload": {
     "message": "最新の状態にするために、この通知をクリックしてTweetDeckタブを更新しましょう"
+  },
+  "settings_show_twitters_warnings_on_media": {
+    "message": "メディアにTwitterの警告を表示する"
   }
 }
