Add settings for different kinds of media warnings
https://github.com/eramdam/BetterTweetDeck/issues/776

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -484,5 +484,17 @@
   },
   "settings_twitter_added_feature_in_january_2022": {
     "message": "Twitter added feature in January 2022"
+  },
+  "settings_show_warnings_for_adult_content": {
+    "message": "Show warnings for adult content"
+  },
+  "settings_show_warnings_for_graphic_violence": {
+    "message": "Show warnings for graphic violence"
+  },
+  "settings_show_warnings_for_sensitive_contents": {
+    "message": "Show warnings for sensitive contents"
+  },
+  "settings_warnings": {
+    "message": "Warnings"
   }
 }
