Show confirmation only when tweet has been engaged with

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -496,5 +496,8 @@
   },
   "settings_warnings": {
     "message": "Warnings"
+  },
+  "settings_redraft_confirmation": {
+    "message": "Require confirmation when the tweet has been interacted with (replies, RTs or likes)."
   }
 }
