--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -503,7 +503,10 @@
   "settings_detect_content_warnings_without_the_keyword": {
     "message": "Detect content warnings without the CW/TW keyword(s) (in [square brackets])"
   },
-  "settings_comma_separated_keywords": {
-    "message": "Comma separated keywords"
+  "settings_collapse_tweets_who_match_one_of_the_following_keywords": {
+    "message": "Collapse tweets who match one of the following keywords:"
+  },
+  "settings_comma_separated_keywords_matched_by_order_in_the_list": {
+    "message": "Comma separated keywords, matched by order in the list"
   }
 }
