--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -497,9 +497,6 @@
   "settings_warnings": {
     "message": "Warnings"
   },
-  "settings_redraft_confirmation": {
-    "message": "Require confirmation when the tweet has been interacted with (replies, RTs or likes)."
-  },
   "settings_detect_content_warnings_without_the_keyword": {
     "message": "Detect content warnings without the CW/TW keyword(s)"
   },
@@ -514,5 +511,8 @@
   },
   "settings_you_can_use_this_to_hide_spoilers": {
     "message": "You can use this to hide spoilers"
+  },
+  "settings_require_a_confirmation_before_deleting_and_editing": {
+    "message": "Require a confirmation before deleting and editing"
   }
 }
