New Crowdin updates (#803)
* New translations messages.json (English)

* New translations messages.json (English)

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -519,7 +519,7 @@
     "message": "Force update banners to be dismissed"
   },
   "settings_dismiss_banner_paragraph": {
-    "message": "In some cases, the banner that shows up after a Better TweetDeck update can have trouble to dismiss itself. Click the button below to fix it."
+    "message": "In some cases, the banner that shows up after a Better TweetDeck update can have trouble dismissing itself. Click the button below to fix it."
   },
   "settings_force_dismissed_banner": {
     "message": "Force dismissed banner"
