--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -520,5 +520,8 @@
   },
   "settings_force_dismissed_banner": {
     "message": "Force dismissed banner"
+  },
+  "settings_dismiss_banner_paragraph": {
+    "message": "In some cases, the banner that shows up after a Better TweetDeck update can have trouble dismissing itself. Click the button below to fix it."
   }
 }
