- add mute twitter circle tweets feature - add border around profile picture of circle tweets feature - add locales for en & de - add settings - add limitedActions to chirp interface - add mute filter for circle tweets

--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -469,5 +469,11 @@
   },
   "settings_warnings": {
     "message": "Warnungen"
+  },
+  "settings_mute_circle_tweets": {
+    "message": "Tweets aus Twitter Circles stummschalten"
+  },
+  "settings_show_circle_tweets_border": {
+    "message": "Grüne Umrandung um Profilbilder aus Twitter Circle Tweets anzeigen"
   }
 }
