--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -526,5 +526,11 @@
   },
   "settings_dont_show_pronouns_for_your_own_accounts": {
     "message": "Don't show pronouns for your own accounts"
+  },
+  "settings_mute_circle_tweets": {
+    "message": "Mute tweets created for twitter circles"
+  },
+  "settings_show_circle_tweets_border": {
+    "message": "Show green border around profile pictures of circle tweets"
   }
 }
