--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -503,6 +503,9 @@
   "settings_collapse_tweets_who_match_one_of_the_following_keywords": {
     "message": "次のキーワードのいずれかにマッチするツイートを折りたたむ:"
   },
+  "settings_comma_separated_keywords_matched_by_order_in_the_list": {
+    "message": "一致させるテキストをカンマで区切って入力してください。"
+  },
   "settings_will_match_patterns_like_food_lorem_ipsum": {
     "message": "\"[food] lorem ipsum\" のようなパターンにマッチします"
   },
@@ -523,5 +526,26 @@
   },
   "settings_dont_show_pronouns_for_your_own_accounts": {
     "message": "自分のアカウントの代名詞を表示しない"
+  },
+  "settings_use_a_verified_icon": {
+    "message": "「認証済み」アイコンを使用"
+  },
+  "settings_use_the_twitter_blue_icon": {
+    "message": "Twitter Blueアイコンを使用"
+  },
+  "settings_use_a_dollar_icon": {
+    "message": "ドルアイコンを使用"
+  },
+  "settings_use_a_clown_icon": {
+    "message": "ピエロアイコンを使用"
+  },
+  "settings_use_a_nerd_icon": {
+    "message": "オタクアイコンを使用"
+  },
+  "settings_mute_circle_tweets": {
+    "message": "Twitterサークルのツイートをミュート"
+  },
+  "settings_show_circle_tweets_border": {
+    "message": "Twitterサークルのツイートで、アイコンに緑色の枠線を表示する"
   }
 }
